@@ -5,7 +5,6 @@ import com.koncha.maxima.entity.Task;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class TaskMapper {
@@ -27,12 +26,12 @@ public class TaskMapper {
     public List<TaskDTO> toDTOs(List<Task> tasks) {
         return tasks.stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Task> toEntities(List<TaskDTO> taskDTOs) {
         return taskDTOs.stream()
                 .map(this::toEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
